Покращив роботу БД, Переписав багато функцій, Створив метод, для зручного створення кнопок Замінив частину данних на enum Виправив баг с пакеджем в UserDTO